force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c.object-meta.xml
<CustomObject>
    <label>Bulk Invoice Process Request Line Log</label>
    <nameField>
        <label>Bulk Invoice Process Request Line Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Invoice Process Request Line Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>