force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c/fields/leaseworks__Attachment_ID__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Attachment_ID__c</fullName>
    <description>It stores generated PDF Id via DocGen API</description>
    <inlineHelpText>It stores generated PDF Id via DocGen API</inlineHelpText>
    <label>Attachment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>