force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c/fields/leaseworks__Bulk_Invoice_Process_Request_Log__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bulk_Invoice_Process_Request_Log__c</fullName>
    <label>Bulk Invoice Process Request Log</label>
    <referenceTo>leaseworks__Bulk_Invoice_Process_Request_Log__c</referenceTo>
    <relationshipLabel>Bulk Invoice Process Request Line Logs</relationshipLabel>
    <relationshipName>Bulk_Invoice_Process_Request_Line_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>