force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c/fields/leaseworks__Link_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Link_to_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to display the invoice connected to Bulk Invoice process request line log.</description>
    <inlineHelpText>The invoice connected to Bulk Invoice process request line log.</inlineHelpText>
    <label>Link to Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Bulk Invoice Process Request Line Logs (Link to Invoice)</relationshipLabel>
    <relationshipName>Bulk_Invoice_Process_Request_Line_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>