force-app/main/default/objects/leaseworks__Bulk_Invoice_Process_Request_Line_Log__c/fields/leaseworks__PDF_Attachment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__PDF_Attachment__c</fullName>
    <description>Contains the URL link to the PDF attachment of the invoices.</description>
    <formula>IF(NOT(ISNULL(leaseworks__Attachment_ID__c))&amp;&amp;NOT(ISBLANK(leaseworks__Attachment_ID__c))&amp;&amp;NOT(ISBLANK(leaseworks__Link_to_Invoice__c)),HYPERLINK(&apos;/&apos; &amp;  leaseworks__Attachment_ID__c,  leaseworks__Link_to_Invoice__r.Name&amp;&apos;.pdf&apos; , &apos;_blank&apos;),IF(NOT(ISNULL(leaseworks__Attachment_ID__c))&amp;&amp;NOT(ISBLANK(leaseworks__Attachment_ID__c))&amp;&amp;NOT(ISBLANK(leaseworks__Link_To_Credit_Memo__c)),HYPERLINK(&apos;/&apos; &amp;  leaseworks__Attachment_ID__c,  leaseworks__Link_To_Credit_Memo__r.Name&amp;&apos;.pdf&apos; , &apos;_blank&apos;),null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contains the URL link to the PDF attachment of the invoices.</inlineHelpText>
    <label>PDF Attachment</label>
    <type>Text</type>
</CustomField>